[gd_scene load_steps=9 format=3 uid="uid://281otqko3fwv"]

[ext_resource type="Script" path="res://scripts/environment_system.gd" id="1_fy7e5"]
[ext_resource type="Script" path="res://scripts/mp_environment.gd" id="2_lksb7"]
[ext_resource type="Environment" uid="uid://d2mrcjxsvpv7i" path="res://environment/environment_parameters_00.tres" id="2_wc13u"]
[ext_resource type="CameraAttributesPractical" uid="uid://ccjc6pvfc3rmq" path="res://environment/camera_attributes_practical_00.tres" id="3_45dn0"]

[sub_resource type="Gradient" id="Gradient_ld4x5"]
offsets = PackedFloat32Array(0, 0.25, 0.416667, 0.583333, 0.75, 1)
colors = PackedColorArray(0.843137, 0, 0.192157, 1, 0.890196, 0.486275, 0.266667, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.890196, 0.486275, 0.266667, 1, 0.843137, 0, 0.192157, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 12

[sub_resource type="Curve" id="Curve_p65r8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.248521, 0), 0.0, 0.0, 0, 0, Vector2(0.502304, 1), 0.0, 0.0, 0, 0, Vector2(0.751479, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_jo6r3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.245562, 1), 0.0, 0.0, 0, 0, Vector2(0.498328, 0), 0.0, 0.0, 0, 0, Vector2(0.754438, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_masro"]
properties/0/path = NodePath(".:time")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="EnvironmentSystem" type="Node3D"]
script = ExtResource("1_fy7e5")
sun_color = SubResource("Gradient_ld4x5")
sun_intensity = SubResource("Curve_p65r8")
moon_intensity = SubResource("Curve_jo6r3")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_masro")
script = ExtResource("2_lksb7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_wc13u")
camera_attributes = ExtResource("3_45dn0")

[node name="SunLight" type="DirectionalLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
light_intensity_lux = 19875.8
light_temperature = 5500.0
light_energy = 20.0
light_angular_distance = 0.5
shadow_enabled = true
shadow_reverse_cull_face = true

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)

[node name="MoonLight" type="DirectionalLight3D" parent="Node3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
light_intensity_lux = 5000.0
light_color = Color(0.788235, 0.85098, 0.85098, 1)
light_energy = 50.0
light_indirect_energy = 10.0
light_volumetric_fog_energy = 10.0
light_angular_distance = 0.03
shadow_enabled = true
shadow_bias = 0.068
shadow_normal_bias = 4.72
shadow_reverse_cull_face = true
directional_shadow_blend_splits = true
directional_shadow_max_distance = 353.3
